// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots NavMenu closed 1`] = `
<div>
  <div>
    <ul
      className="MuiList-root MuiList-padding"
      onBlur={[Function]}
      onKeyDown={[Function]}
      role="menu"
    >
      <li
        className="MuiListItem-container"
      >
        <div
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction MuiMenuItem-root"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            className="MuiTouchRipple-root"
          />
        </div>
        <div
          className="MuiListItemSecondaryAction-root"
        >
          <button
            className="MuiButtonBase-root MuiIconButton-root"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root"
                focusable="false"
                onClick={[Function]}
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                  />
                </g>
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <hr
        className="MuiDivider-root"
        onFocus={[Function]}
        tabIndex={-1}
      />
      <a
        aria-current="true"
        className="withRouter(NavMenuItem)-nav withRouter(NavMenuItem)-activeNav"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              Home
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
      <a
        aria-current={false}
        className="withRouter(NavMenuItem)-nav"
        href="/auctions/new"
        onClick={[Function]}
      >
        <li
          className="MuiButtonBase-root MuiButtonBase-disabled MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-disabled MuiListItem-button MuiMenuItem-root"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              Create Auction
            </span>
          </div>
        </li>
      </a>
      <hr
        className="MuiDivider-root"
        onFocus={[Function]}
        tabIndex={-1}
      />
      <a
        aria-current={false}
        className="withRouter(NavMenuItem)-nav"
        href="/rules"
        onClick={[Function]}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              Rules
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
      <a
        aria-current={false}
        className="withRouter(NavMenuItem)-nav"
        href="/about"
        onClick={[Function]}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              About
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
    </ul>
  </div>
</div>
`;

exports[`Storyshots NavMenu default 1`] = `
<div>
  <div>
    <ul
      className="MuiList-root MuiList-padding"
      onBlur={[Function]}
      onKeyDown={[Function]}
      role="menu"
    >
      <li
        className="MuiListItem-container"
      >
        <div
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction MuiMenuItem-root"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            className="MuiTouchRipple-root"
          />
        </div>
        <div
          className="MuiListItemSecondaryAction-root"
        >
          <button
            className="MuiButtonBase-root MuiIconButton-root"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root"
                focusable="false"
                onClick={[Function]}
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                  />
                </g>
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <hr
        className="MuiDivider-root"
        onFocus={[Function]}
        tabIndex={-1}
      />
      <a
        aria-current="true"
        className="withRouter(NavMenuItem)-nav withRouter(NavMenuItem)-activeNav"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              Home
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
      <a
        aria-current={false}
        className="withRouter(NavMenuItem)-nav"
        href="/auctions/new"
        onClick={[Function]}
      >
        <li
          className="MuiButtonBase-root MuiButtonBase-disabled MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-disabled MuiListItem-button MuiMenuItem-root"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              Create Auction
            </span>
          </div>
        </li>
      </a>
      <hr
        className="MuiDivider-root"
        onFocus={[Function]}
        tabIndex={-1}
      />
      <a
        aria-current={false}
        className="withRouter(NavMenuItem)-nav"
        href="/rules"
        onClick={[Function]}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              Rules
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
      <a
        aria-current={false}
        className="withRouter(NavMenuItem)-nav"
        href="/about"
        onClick={[Function]}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              About
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
    </ul>
  </div>
</div>
`;

exports[`Storyshots NavMenu logged in 1`] = `
<div>
  <div>
    <ul
      className="MuiList-root MuiList-padding"
      onBlur={[Function]}
      onKeyDown={[Function]}
      role="menu"
    >
      <li
        className="MuiListItem-container"
      >
        <div
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiListItem-secondaryAction MuiMenuItem-root"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            className="MuiTouchRipple-root"
          />
        </div>
        <div
          className="MuiListItemSecondaryAction-root"
        >
          <button
            className="MuiButtonBase-root MuiIconButton-root"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root"
                focusable="false"
                onClick={[Function]}
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                  />
                </g>
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
        </div>
      </li>
      <hr
        className="MuiDivider-root"
        onFocus={[Function]}
        tabIndex={-1}
      />
      <a
        aria-current="true"
        className="withRouter(NavMenuItem)-nav withRouter(NavMenuItem)-activeNav"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              Home
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
      <a
        aria-current={false}
        className="withRouter(NavMenuItem)-nav"
        href="/auctions/new"
        onClick={[Function]}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              Create Auction
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
      <hr
        className="MuiDivider-root"
        onFocus={[Function]}
        tabIndex={-1}
      />
      <a
        aria-current={false}
        className="withRouter(NavMenuItem)-nav"
        href="/rules"
        onClick={[Function]}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              Rules
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
      <a
        aria-current={false}
        className="withRouter(NavMenuItem)-nav"
        href="/about"
        onClick={[Function]}
      >
        <li
          className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="menuitem"
          tabIndex={-1}
        >
          <div
            className="MuiListItemText-root"
          >
            <span
              className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
            >
              About
            </span>
          </div>
          <span
            className="MuiTouchRipple-root"
          />
        </li>
      </a>
    </ul>
  </div>
</div>
`;
